--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -22,5 +22,12 @@ jobs:
         run: npm run test
       - name: Build App
         run: npm run build
-      - name: Deploy App
-        run: sudo rsync -a ./build/ /var/www/html
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
+          aws-region: ${{ secrets.AWS_REGION }}
+      - name: AWS Demo Access
+        run: aws s3 sync build  s3://cibuket2024
