--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,9 +1,6 @@
 name: GitHub Actions Demo
 run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
-on: 
-  push:
-    tags:
-      - v1.**
+on: [push]
 jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
@@ -23,14 +20,14 @@ jobs:
         run: npm ci        
       - name: Run Unit Tests
         run: npm run test
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v4
+      - name: Build App 
+        uses: npm run build
         with:
-            aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-            aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-            aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
-          aws-region: ${{ secrets.AWS_REGION }}
+           aws-access-key-id: $ {{ secrets.AWS_ACCESS_KEY_ID }}
+           aws-secret-access-key: $ {{ secrets.AWS_SECRET_ACCESS_KEY }}
+           aws-session-token: $ {{ secrets.AWS_SESSION_TOKEN }}
+           aws-region: $ {{ secrets.AWS_REGION }}
       - name: AWS Bucket Access
         env: 
-           AWS_BUCKET_NAME: cibuket2024
-        run: aws s3 sync build  s3://${{ AWS_BUCKET_NAME }}
+          AWS_BUCKET_NAME: cibuket2024
+        run: aws s3 sync build  s3://$ {{ AWS_BUCKET_NAME }}
